--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="sidebar__user">
                 <div class="sidebar__name">Алина Майер</div>
-                <div class="sidebar__text">Счастливый студент</div>
+                <div class="sidebar__text">Новичок</div>
             </div>
             <div class="sidebar__tabs">
                 <div class="sidebar__item">
@@ -94,6 +94,9 @@
                 <ul class="content__list">
                     <li class="content__list-item">
                         <a href="Hello ArokenRu/index.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="home-work2/index.html">Урок 1</a>
                     </li>
                 </ul>
             </div>
