--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="home-work2/index.html">Урок 2</a>
                     </li>
                      <li class="content__list-item">
-                        <a href="homework-21/index.html">Урок 3</a>
+                        <a href="intro-21/index.html">Урок 3</a>
                     </li>
                 </ul>
             </div>
