--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                      <li class="content__list-item">
                         <a href="intro-21/index.html">Урок 3</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-33/index.html">Урок 33</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
